@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-17T08:38:48Z",
+  "timestamp" : "2022-10-17T16:41:36Z",
   "count_outdated" : 185,
   "uniques_outdated" : 56,
-  "count" : 203,
+  "count" : 204,
   "uniques" : 67,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-10-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
