@@ -1,5 +1,5 @@
 {
-  "count": 18,
+  "count": 19,
   "uniques": 2,
   "clones": [
     {
@@ -54,7 +54,7 @@
     },
     {
       "timestamp": "2022-10-17T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
