@@ -1,3 +1,11 @@
+2022-10-17T16:41:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3266962300 # 144
+* notice: last 14d: unq all: 2 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 56 185 / 67 203
+* notice: next accum: outdated-unq outdated-all / unq all: 56 185 / 67 204
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-17]
+
 2022-10-17T08:38:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3263617021 # 143
 * notice: last 14d: unq all: 2 18
